@@ -21,4 +21,4 @@ Suggests:
     knitr,
     classInt,
     ggplot2
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
